--- a/docs/posts/12wk-1.out.ipynb
+++ b/docs/posts/12wk-1.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Import"
       ],
-      "id": "eec084b3-7981-4899-b934-05c0fd7d45d5"
+      "id": "6a700c30-cbbe-4241-a90a-196a2d07dbb9"
     },
     {
       "cell_type": "code",
@@ -55,7 +55,7 @@
         "\n",
         "`-` 데이터 정리"
       ],
-      "id": "5e8034c8-d496-4bf8-b4b6-79a00b158dbd"
+      "id": "8ea71fc6-c5b5-440b-a10b-c0e1f69720fa"
     },
     {
       "cell_type": "code",
@@ -114,7 +114,7 @@
       "source": [
         "## B. 풀이 – 실패"
       ],
-      "id": "5959e103-7f78-4a9e-805b-c2a8c5bf854c"
+      "id": "a760ff44-ad32-4892-9900-7a007d0a2ba1"
     },
     {
       "cell_type": "code",
@@ -184,7 +184,7 @@
         "\n",
         "`-` 일단 망한건 망한거고 분석을 위해서 숫자좀 체크하자."
       ],
-      "id": "fe077434-35d6-475c-9c10-961e4ba59378"
+      "id": "c5fc762f-6ded-4f6f-aaba-05392eb2ea21"
     },
     {
       "cell_type": "code",
@@ -208,7 +208,7 @@
         "\n",
         "`-` 새로운 방식의 데이터 정리"
       ],
-      "id": "9792f8c0-6f4e-44c4-b418-ae49070955a2"
+      "id": "68c95ad8-25de-4b71-bf07-528696a2783b"
     },
     {
       "cell_type": "code",
@@ -231,7 +231,7 @@
       "source": [
         "`-` 사용자 정의 Hnet를 사용"
       ],
-      "id": "aee9215a-d993-4e2d-b18d-0e07a29b986e"
+      "id": "bf9fcd37-5cfe-44a4-a5ff-e6a98bc6e2b7"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "bea2b70f-604d-4d02-bc84-d0092d0334cc"
+      "id": "ffed478e-f636-4832-8838-f4c354fc5c5c"
     },
     {
       "cell_type": "code",
@@ -302,7 +302,7 @@
         "\n",
         "`# 예비학습` – 아래를 관찰하자."
       ],
-      "id": "207872aa-ee40-471d-a384-4950e863ab8a"
+      "id": "a19d3bea-6c19-43fe-8244-2772496fd7bc"
     },
     {
       "cell_type": "code",
@@ -364,7 +364,7 @@
         "\n",
         "`-` 또 다른방식의 구현"
       ],
-      "id": "027cc5dc-ecb2-4a99-a4a6-361524551a75"
+      "id": "d623fe91-5582-4dd5-a20d-5392286cf89b"
     },
     {
       "cell_type": "code",
@@ -430,7 +430,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "47935971-3859-4729-92a2-dcabd035ee10"
+      "id": "9a1cf9d8-17b6-4973-b536-ebb86ff17e24"
     },
     {
       "cell_type": "code",
@@ -450,7 +450,7 @@
       "source": [
         "`-` 임베딩공간의 해석"
       ],
-      "id": "b5a55868-b09a-4deb-8b85-c7e604992cb5"
+      "id": "27f42fb5-3cd8-41cc-89e7-031f37cc458c"
     },
     {
       "cell_type": "code",
@@ -699,7 +699,7 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "7ce8f349-dd4f-42bf-8edf-f4e83b7150ee"
+      "id": "58a0aa77-3307-4bbd-8ca5-05cce23ef811"
     },
     {
       "cell_type": "code",
@@ -722,7 +722,7 @@
       "source": [
         "`-` 순환신경망으로 적합"
       ],
-      "id": "cb0bfb7e-e097-427a-8f43-885a4c939e1e"
+      "id": "6d571743-6748-431a-965c-b451a67e67d6"
     },
     {
       "cell_type": "code",
@@ -773,7 +773,7 @@
       "source": [
         "`-` 결과 확인 및 시각화"
       ],
-      "id": "6ee6f5b1-f2d6-4d63-8a06-e80b0212f884"
+      "id": "ebd8edfa-6e58-4a44-826e-05c6c28bd72a"
     },
     {
       "cell_type": "code",
@@ -786,7 +786,7 @@
         "h = torch.zeros(L,2)\n",
         "water = torch.zeros(2)\n",
         "h[0] = rnncell(X[0],water)\n",
-        "for t in range(L):\n",
+        "for t in range(1,L):\n",
         "    h[t] = rnncell(X[t],h[t-1])\n",
         "yhat = soft(cook(h))\n",
         "yhat    "
@@ -822,7 +822,7 @@
       "source": [
         "`-` yhat 값 분석"
       ],
-      "id": "d01daa86-73f0-4a43-a6e0-8e44c1a2a1ff"
+      "id": "e90b4829-4bbd-48cd-bd65-c7a47cd6803a"
     },
     {
       "cell_type": "code",
@@ -844,7 +844,7 @@
         "\n",
         "`-` h1,h2 분석 (= 임베딩스페이스 분석)"
       ],
-      "id": "d8afe870-63c9-4ca4-b245-4ca77b595689"
+      "id": "d644bed7-1e94-4663-bbc7-496b00b0837c"
     },
     {
       "cell_type": "code",
@@ -883,7 +883,7 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "853d0337-33d5-48c8-a393-8f68ecf88918"
+      "id": "c1029e78-235d-4648-9441-45231e0d9861"
     },
     {
       "cell_type": "code",
@@ -906,7 +906,7 @@
       "source": [
         "`-` Net설계 및 가중치 설정 (구현1과 동일하도록 가중치 초기화)"
       ],
-      "id": "573d93d4-8393-473c-924e-a220a39c8911"
+      "id": "38576aad-88b8-4a5d-9aee-91964aa521f9"
     },
     {
       "cell_type": "code",
@@ -944,7 +944,7 @@
       "source": [
         "`-` 손실함수 및 옵티마이저 설정"
       ],
-      "id": "18f80ffe-f987-4249-a1c2-3f223781f73d"
+      "id": "4045951d-203f-4c6f-9472-6dc854370c16"
     },
     {
       "cell_type": "code",
@@ -965,7 +965,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "e2adf4fa-d3e5-4bd7-8f07-f60b121a8057"
+      "id": "d931f12e-c14f-414d-8500-06cf950bb6f4"
     },
     {
       "cell_type": "code",
@@ -1000,7 +1000,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "c937fb9e-b33b-43a4-b30f-f39651fb4aef"
+      "id": "ab85123f-c872-48b8-b9db-60cd64f10875"
     },
     {
       "cell_type": "code",
@@ -1013,7 +1013,7 @@
         "h = torch.zeros(L,2)\n",
         "water = torch.zeros(2)\n",
         "h[0] = rnncell(X[0],water)\n",
-        "for t in range(L):\n",
+        "for t in range(1,L):\n",
         "    h[t] = rnncell(X[t],h[t-1])\n",
         "yhat = soft(cook(h))\n",
         "yhat"
@@ -1030,7 +1030,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "c4371c8b-07a6-421d-984d-0e3d44721822"
+      "id": "6dd452f5-508e-4fc7-97e8-744f268203fd"
     },
     {
       "cell_type": "code",
@@ -1053,7 +1053,7 @@
         "\n",
         "`(2)` `torch.nn.RNNCell`을 이용하여 (1)의 결과를 재현하라."
       ],
-      "id": "ebb0f0b4-52d1-40a9-83d7-f3396efee092"
+      "id": "3aff2982-44fd-415c-a2d7-f11efd712a2d"
     }
   ],
   "nbformat": 4,
