--- a/posts/12wk-1.ipynb
+++ b/posts/12wk-1.ipynb
@@ -1277,7 +1277,7 @@
     "h = torch.zeros(L,2)\n",
     "water = torch.zeros(2)\n",
     "h[0] = rnncell(X[0],water)\n",
-    "for t in range(L):\n",
+    "for t in range(1,L):\n",
     "    h[t] = rnncell(X[t],h[t-1])\n",
     "yhat = soft(cook(h))\n",
     "yhat    "
@@ -1578,7 +1578,7 @@
     "h = torch.zeros(L,2)\n",
     "water = torch.zeros(2)\n",
     "h[0] = rnncell(X[0],water)\n",
-    "for t in range(L):\n",
+    "for t in range(1,L):\n",
     "    h[t] = rnncell(X[t],h[t-1])\n",
     "yhat = soft(cook(h))\n",
     "yhat"
