--- a/docs/posts/12wk-1.out.ipynb
+++ b/docs/posts/12wk-1.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 12wk-1: 순환신경망 (2) – `rNNCell`, `RNNCell`\n",
+        "# 12wk-1: 순환신경망 (2) – 순환신경망의 이해, `rNNCell`, `RNNCell`\n",
         "\n",
         "최규빈  \n",
         "2024-05-20\n",
@@ -17,11 +17,11 @@
         "\n",
         "# 2. Import"
       ],
-      "id": "6a700c30-cbbe-4241-a90a-196a2d07dbb9"
+      "id": "4c85204b-77c5-4499-b09c-5d5face6dbfa"
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 177,
       "metadata": {
         "tags": []
       },
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 178,
       "metadata": {
         "tags": []
       },
@@ -55,11 +55,11 @@
         "\n",
         "`-` 데이터 정리"
       ],
-      "id": "8ea71fc6-c5b5-440b-a10b-c0e1f69720fa"
+      "id": "dea9e371-44b1-4028-8323-293b75c1f184"
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 179,
       "metadata": {
         "tags": []
       },
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 180,
       "metadata": {
         "tags": []
       },
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 181,
       "metadata": {
         "tags": []
       },
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 182,
       "metadata": {
         "tags": []
       },
@@ -114,11 +114,11 @@
       "source": [
         "## B. 풀이 – 실패"
       ],
-      "id": "a760ff44-ad32-4892-9900-7a007d0a2ba1"
+      "id": "c7242f7e-bb20-4f4b-a9e1-f1c27f47df59"
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 183,
       "metadata": {
         "tags": []
       },
@@ -184,7 +184,7 @@
         "\n",
         "`-` 일단 망한건 망한거고 분석을 위해서 숫자좀 체크하자."
       ],
-      "id": "c5fc762f-6ded-4f6f-aaba-05392eb2ea21"
+      "id": "4c6bf485-9939-4f9a-aa7f-4a3e85be15f2"
     },
     {
       "cell_type": "code",
@@ -208,7 +208,7 @@
         "\n",
         "`-` 새로운 방식의 데이터 정리"
       ],
-      "id": "68c95ad8-25de-4b71-bf07-528696a2783b"
+      "id": "091084ca-6113-4cb8-a77a-608e34ec1112"
     },
     {
       "cell_type": "code",
@@ -231,7 +231,7 @@
       "source": [
         "`-` 사용자 정의 Hnet를 사용"
       ],
-      "id": "bf9fcd37-5cfe-44a4-a5ff-e6a98bc6e2b7"
+      "id": "085f2148-9dc6-4cc3-ad31-17677e20968c"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "ffed478e-f636-4832-8838-f4c354fc5c5c"
+      "id": "0ef9d43e-4496-4ae9-bc10-148e29f2c91f"
     },
     {
       "cell_type": "code",
@@ -302,7 +302,7 @@
         "\n",
         "`# 예비학습` – 아래를 관찰하자."
       ],
-      "id": "a19d3bea-6c19-43fe-8244-2772496fd7bc"
+      "id": "ce9f0e44-f4d0-4899-8316-64167ca293bd"
     },
     {
       "cell_type": "code",
@@ -364,7 +364,7 @@
         "\n",
         "`-` 또 다른방식의 구현"
       ],
-      "id": "d623fe91-5582-4dd5-a20d-5392286cf89b"
+      "id": "3fa2ce03-9702-43fe-9ad0-1b2034c113af"
     },
     {
       "cell_type": "code",
@@ -430,7 +430,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "9a1cf9d8-17b6-4973-b536-ebb86ff17e24"
+      "id": "9efa1bcb-0871-4d3b-85ab-dd8225365e92"
     },
     {
       "cell_type": "code",
@@ -450,7 +450,7 @@
       "source": [
         "`-` 임베딩공간의 해석"
       ],
-      "id": "27f42fb5-3cd8-41cc-89e7-031f37cc458c"
+      "id": "a4614964-2146-46d0-8dfc-33281ab1045d"
     },
     {
       "cell_type": "code",
@@ -699,11 +699,11 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "58a0aa77-3307-4bbd-8ca5-05cce23ef811"
+      "id": "a04bf465-7477-46d6-ad9f-39b55311d632"
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 184,
       "metadata": {
         "tags": []
       },
@@ -722,11 +722,11 @@
       "source": [
         "`-` 순환신경망으로 적합"
       ],
-      "id": "6d571743-6748-431a-965c-b451a67e67d6"
+      "id": "84d9f9af-9a75-4269-833a-3d4863e41cb8"
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 185,
       "metadata": {
         "tags": []
       },
@@ -773,11 +773,11 @@
       "source": [
         "`-` 결과 확인 및 시각화"
       ],
-      "id": "ebd8edfa-6e58-4a44-826e-05c6c28bd72a"
+      "id": "5c726ef7-5832-441f-a4a3-afdb64b76b6f"
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 186,
       "metadata": {
         "tags": []
       },
@@ -795,7 +795,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 187,
       "metadata": {
         "tags": []
       },
@@ -822,11 +822,11 @@
       "source": [
         "`-` yhat 값 분석"
       ],
-      "id": "e90b4829-4bbd-48cd-bd65-c7a47cd6803a"
+      "id": "f4631468-c0b9-4869-a9cb-3a7188ba41be"
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": 188,
       "metadata": {
         "tags": []
       },
@@ -844,11 +844,11 @@
         "\n",
         "`-` h1,h2 분석 (= 임베딩스페이스 분석)"
       ],
-      "id": "d644bed7-1e94-4663-bbc7-496b00b0837c"
+      "id": "54f93a9c-b92f-47ab-829e-c75713754fc8"
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": 189,
       "metadata": {
         "tags": []
       },
@@ -883,11 +883,11 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "c1029e78-235d-4648-9441-45231e0d9861"
+      "id": "774f8c95-d7b1-4c32-83bb-ef122bd3bf7f"
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": 190,
       "metadata": {
         "tags": []
       },
@@ -906,11 +906,11 @@
       "source": [
         "`-` Net설계 및 가중치 설정 (구현1과 동일하도록 가중치 초기화)"
       ],
-      "id": "38576aad-88b8-4a5d-9aee-91964aa521f9"
+      "id": "edd1468b-ae23-4124-9c3b-4a17820d00f1"
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 191,
       "metadata": {
         "tags": []
       },
@@ -924,7 +924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 192,
       "metadata": {
         "tags": []
       },
@@ -944,11 +944,11 @@
       "source": [
         "`-` 손실함수 및 옵티마이저 설정"
       ],
-      "id": "4045951d-203f-4c6f-9472-6dc854370c16"
+      "id": "906ad6d7-f13b-4606-a47c-4d47639992ef"
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 193,
       "metadata": {
         "tags": []
       },
@@ -965,11 +965,11 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "d931f12e-c14f-414d-8500-06cf950bb6f4"
+      "id": "4623592b-4123-414e-be6e-8821d23814e5"
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 194,
       "metadata": {
         "tags": []
       },
@@ -1000,11 +1000,11 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "ab85123f-c872-48b8-b9db-60cd64f10875"
+      "id": "3bb65297-2afe-415a-8e28-87bfae0b17a4"
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 195,
       "metadata": {
         "tags": []
       },
@@ -1030,7 +1030,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "6dd452f5-508e-4fc7-97e8-744f268203fd"
+      "id": "b664f3ec-b26a-48dd-b534-e7c7493ac389"
     },
     {
       "cell_type": "code",
@@ -1053,7 +1053,7 @@
         "\n",
         "`(2)` `torch.nn.RNNCell`을 이용하여 (1)의 결과를 재현하라."
       ],
-      "id": "3aff2982-44fd-415c-a2d7-f11efd712a2d"
+      "id": "1477a0c5-5be8-45a7-8e56-0489d7dc4479"
     }
   ],
   "nbformat": 4,
@@ -1074,7 +1074,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.11.8"
     }
   }
 }
