--- a/docs/posts/12wk-2.out.ipynb
+++ b/docs/posts/12wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Import"
       ],
-      "id": "303d8ad6-fd56-460e-9e2d-452b01ebb270"
+      "id": "8ab02b7a-caea-48b4-abc6-5144f28d35f8"
     },
     {
       "cell_type": "code",
@@ -55,7 +55,7 @@
         "\n",
         "`-` 데이터 정리"
       ],
-      "id": "5e417677-7e8a-4f9d-a9c4-e8029727e392"
+      "id": "cf2244cc-56ab-4519-9c22-b26281da7646"
     },
     {
       "cell_type": "code",
@@ -93,7 +93,7 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "af8a8621-dae5-4b9e-af9a-2bd15c05669e"
+      "id": "4a452678-b36a-4f13-a072-cf5fe43da623"
     },
     {
       "cell_type": "code",
@@ -116,7 +116,7 @@
       "source": [
         "`-` Net설계 및 가중치 설정 (구현1과 동일하도록 가중치 초기화)"
       ],
-      "id": "cee792a0-4e88-4b8c-a033-49525475f568"
+      "id": "35bf3e91-35c3-4a94-84ff-e1d3f8b19268"
     },
     {
       "cell_type": "code",
@@ -138,7 +138,7 @@
       "source": [
         "`-` 손실함수 및 옵티마이저 설정"
       ],
-      "id": "cad2400a-8d5e-4cf6-abcc-0cfddb1e82c8"
+      "id": "b96e887a-7c56-47bd-8331-d8fb28aa7446"
     },
     {
       "cell_type": "code",
@@ -229,7 +229,7 @@
         "\n",
         "ref: <https://pytorch.org/docs/stable/generated/torch.nn.RNN.html>"
       ],
-      "id": "28fd7bca-c310-4f2d-aaf7-925640bc8bd5"
+      "id": "25e1a3d7-2f7d-43d4-b668-4d7c254cbafb"
     },
     {
       "cell_type": "code",
@@ -355,7 +355,7 @@
       "source": [
         "## D. 구현3 – RNN + GPU"
       ],
-      "id": "96349fe6-f57a-421a-ad49-297d088cbe16"
+      "id": "b35a8e23-84ff-4fa2-a227-94a8d60c883e"
     },
     {
       "cell_type": "code",
@@ -463,7 +463,7 @@
       "source": [
         "-   살짝결과다름"
       ],
-      "id": "c54a9229-1ea6-48f5-bc46-474e4d092089"
+      "id": "de1be332-be61-4d48-b370-b9d79e692a60"
     },
     {
       "cell_type": "code",
@@ -492,9 +492,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## E. 구현4 – RNN + GPU + 맹물생략"
+        "## E. 구현4 – RNN + GPU + 맹물X"
       ],
-      "id": "7839b854-1cf2-4bad-bf43-17ebe93895bd"
+      "id": "1293cb3a-308c-4b51-8c6b-ca37f7947c4e"
     },
     {
       "cell_type": "code",
@@ -625,7 +625,7 @@
       "source": [
         "## F. 은닉노드 비교실험"
       ],
-      "id": "01418037-e739-4e62-ae1b-6d8b955ba1a9"
+      "id": "378f0216-8809-4690-8d79-2d902c72eb2c"
     },
     {
       "cell_type": "code",
@@ -782,7 +782,7 @@
         "\n",
         "`-` 데이터 정리"
       ],
-      "id": "9cd9ef97-8ee3-4a42-85de-14ab0549a11e"
+      "id": "30fa3451-be4c-480a-8e43-2b450a9c6386"
     },
     {
       "cell_type": "code",
@@ -818,7 +818,7 @@
         "\n",
         "ref: <https://pytorch.org/docs/stable/generated/torch.nn.RNNCell.html>"
       ],
-      "id": "d3df09ae-19e0-4b66-82de-882646e3a028"
+      "id": "2b8097ed-11ff-4179-8e7b-22a2727e6a29"
     },
     {
       "cell_type": "code",
@@ -875,7 +875,7 @@
       "source": [
         "## C. LSTM"
       ],
-      "id": "9565980a-c2e9-49fa-aa16-169c11d12a3f"
+      "id": "f6b5269c-addf-4067-bf1a-0c2e4aa120c6"
     },
     {
       "cell_type": "code",
